data/collection/fixes/descriptions/scala/scala-7689
Compiles with 2.10.2:
```scala
object A {
  def x(f: List[_] => Int = _ => 3) = 9
}
```

The error message with 2.11 is:
```scala
A.scala:2: error: missing parameter type
  def x(f: List[_] => Int = _ => 3) = 9
                            ^
one error found
```